# esp32-projects

./: README.md
active-buzzer/: Cargo.toml  wokwi.toml
async-projects/blinky-embassy/: Cargo.toml
ble-notification/: Cargo.toml  rust-toolchain.toml
ble-with-bleps/: Cargo.toml  wokwi.toml
bluetooth-low-energy/: Cargo.toml
bluetooth-low-energy/src/: ble.rs
burglar-alarm/: Cargo.toml  wokwi.toml
buzzer-song/: Cargo.toml  wokwi.toml
dht-temphum/: Cargo.toml
e-ink-hello/: Cargo.toml  wokwi.toml
e-ink-image/: Cargo.toml  wokwi.toml
hello-oled/: Cargo.toml  wokwi.toml
hello-rat/: Cargo.toml  rust-toolchain.toml
hello-rat-2/: Cargo.toml
joystick-adc/: Cargo.toml
joystick-movement/: Cargo.toml  wokwi.toml
lcd-custom/: Cargo.toml
lcd-custom-multi/: Cargo.toml
lcd-hello/: Cargo.toml
ldr-dracula/: Cargo.toml  wokwi.toml
led-dim/: Cargo.toml
led-fader/: Cargo.toml
led-highfader/: Cargo.toml  wokwi.toml
non-async/dht-temphum/: Cargo.toml
non-async/max7219-ledmatrix/: Cargo.toml  wokwi.toml
oled-bmp/: Cargo.toml  wokwi.toml
oled-image/: Cargo.toml  wokwi.toml
oled-rawimg/: Cargo.toml  wokwi.toml
oled-temperature/: Cargo.toml  wokwi.toml
pir-sensor/: Cargo.toml  wokwi.toml
rfid-change-key/: Cargo.toml
rfid-dump/: Cargo.toml  wokwi.toml
rfid-read/: Cargo.toml
rfid-uid/: Cargo.toml
rfid-write/: Cargo.toml
room-temperature/: Cargo.toml  wokwi.toml
sdcard/: Cargo.toml
sdcard-read/: Cargo.toml  wokwi.toml
sdcard-write/: Cargo.toml  wokwi.toml
servo-mcpwm/: Cargo.toml  wokwi.toml
servo-motor/: Cargo.toml  wokwi.toml
tft-display-hello/: Cargo.toml
tft-display-image/: Cargo.toml
ultrasonic/: Cargo.toml  wokwi.toml
ultrasonic-alert/: Cargo.toml  wokwi.toml
webserver/: Cargo.toml
webserver-base/: Cargo.toml  wokwi.toml
webserver-base/src/: wifi.rs
webserver-html/: Cargo.toml
webserver-html/src/: index.html  web.rs  wifi.rs
wifi-ap/: Cargo.toml  wokwi.toml
wifi-ap/src/: index.html  wifi.rs
wifi-async-http/: Cargo.toml  wokwi.toml
wifi-led/: Cargo.toml  rust-toolchain.toml
wifi-led/src/: index.html  lib.rs  web.rs  wifi.rs
wifi-webfetch/: Cargo.toml  wokwi.toml
wifi-website/: Cargo.toml
