[package]
edition      = "2024"
name         = "oled-temperature"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "oled-temperature"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32"] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time     = { version = "0.5.0", features = ["defmt"] }
esp-println      = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

libm = "0.2.15"
nb = "1.1.0"
ssd1306 = { version = "0.10.0", features = ["async"] }
embedded-graphics = "0.8.1"
heapless = "0.9.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
