[package]
edition = "2021"
name = "tft-display-hello"
version = "0.1.0"

[[bin]]
name = "tft-display-hello"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "0.3.10"
esp-hal = { version = "1.0.0-beta.0", features = [
    "defmt",
    "esp32",
    "unstable",
] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
embedded-hal-bus = { version = "0.1" }
display-interface-spi = "0.5"
ili9341 = "0.6.0"
embedded-graphics = "0.8.1"
profont = "0.7.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
